# verificarlo

./: .clang-format-ignore  .gitignore  .gitmodules  .travis.yml  CHANGELOG  COPYING  Dockerfile  Dockerfile_ubuntu-24.04  Makefile.am  README.md  autogen.sh  compile_randlib.sh  configure.ac  docker-compose.test.yml  install-interflop.sh  pyproject.toml  rand.h  verificarlo  verificarlo-c  verificarlo-c++  verificarlo-f  verificarlo.in  verificarlo.in.in
src/: Makefile.am  vfc_ddebug  vfc_precexp  vfc_report
src/backends/: Makefile.am  interflop_cancellation.c
src/ci/: Makefile.am  setup.py  test.py
src/clang_options_parser/: clang_options_parser.py
src/common/: Makefile.am  float_const.h  float_struct.h  float_type.h  float_utils.c  float_utils.h  generic_builtin.h  interflop.h  logger.c  logger.h  mca_const.h  options.c  options.h  printf_specifier.c  printf_specifier.h  tinymt64.c  tinymt64.h  vfc_hashmap.c  vfc_hashmap.h  vfc_probes.c  vfc_probes.h  vfc_probes_f.f90  vprec_tools.c  vprec_tools.h  vprec_tools_vector.h
src/ddebug/: DD_exec_stat.py  DD_stoch.py  dd_config.py
src/interflop-stdlib/: Makefile.am  autogen.sh  automake-expand  configure.ac  interflop-config.in  interflop.h  interflop_stdlib.c  interflop_stdlib.h
src/interflop_ieee_backend/: Makefile.am  interflopieee.c
src/libbitmask/: Makefile.am  a.out  bitmasklib.c  bitmasklib.lo  libbitmask.h  libbitmask.la  random_bitarray.h  test.c
src/libmca-mpfr/: Makefile.am  libmca-mpfr.h  mcalib.c  mcalib_types.h
src/libmca-quad/: Makefile.am  mcalib.c
src/libmcainstrument/: Makefile.am  libMCAInstrument.cpp
src/libvfcfuncinstrument/: Makefile.am  libVFCFuncInstrument.cpp
src/libvfcinstrument/: Makefile.am  libVFCInstrument.cpp
src/libvfcinstrumentprism/: Makefile.am  TargetFeatures.hpp  libVFCInstrumentPRISM.cpp  libVFCInstrumentPRISMOptions.hpp
src/libvfcrange-tracer/: Makefile.am  librangetracer.cpp
src/libvfcreport/: Makefile.am  libVFCReport.cpp  libvfcreport.la  libvfcreport_la-libVFCReport.lo
src/libvfctracer/: Makefile.am  libtracer.cpp  opcode.cpp  opcode.hxx  vfctracer.cpp  vfctracer.hxx
src/libvfctracer-probe/: Makefile.am  libtracer-probe.cpp  vfctracer-probe.h
src/mcacontrolinterface/: C_interface.c  F_interface.c
src/mcalib/: Makefile.am  mcalib.c  mcalib.h
src/mcawrapper/: mcawrapper.c
src/numdbg_ieee_backend/: Makefile.am  numdbgieee.c
src/tools/: Makefile.am  vfc-vtk.py  vfc_ci  vfc_precexp  vfc_report
src/vfcwrapper/: Makefile.am  funcinstr.c  hashset.c  main.c  main.c.in  vfcwrapper.c  vfcwrapper.h
tests/: Makefile.am  clean.sh  clean_list.txt  paths.sh  paths.sh.in  test.sh  testplan.test
tests/EP_bench_sumTest/: Makefile
tests/test_absoluteError/: clean.sh  generic_test.sh  generic_test_simple_additive.sh  generic_test_simple_generative.sh  test.sh  test_additive.c  test_generative.c
tests/test_absolute_error/: .gitignore  Makefile  clean.sh  compute_error.sh  generic_test_simple.sh  test.sh  test_additive.c  test_generative.c
tests/test_accsum/: Makefile  README  bench.conf  out_llvm_C  out_llvm_fastaccsum  out_llvm_sorted  out_verificarlo_C  out_verificarlo_C_req  out_verificarlo_fastaccsum  out_verificarlo_fastaccsum2  out_verificarlo_sorted
tests/test_backends/: check.py  test.c  test.sh
tests/test_bitmask/: test.sh  test_bitmask.c  test_bitmask_ref.c
tests/test_bitmask_backend/: .gitignore  clean.sh  compare.py  compute_error.sh  quadmath_stats.c  quadmath_stats.h  test.c  test.sh  test.sh.in
tests/test_blacklist/: functions.txt  output.ref  test.c  test.sh
tests/test_branch_instrumentation/: clean.sh  run.c  test.c  test.sh
tests/test_cancellation/: .gitignore  clean.sh  compare  compare.c  makefile  output.txt  result.txt  test.sh  test_canc_detect  test_canc_detect.c  test_canc_exp.c  test_double  test_double.c  test_float  test_float.c
tests/test_cast_instrumentation/: clean.sh  test.c  test.sh
tests/test_cpp/: clean.sh  ref  test.cpp  test.sh
tests/test_cython/: .gitignore  clean.sh  setup.py  test.pyx  test.sh
tests/test_daz_ftz/: .gitignore  Makefile  clean.sh  compute_error.sh  ref_DOUBLE  ref_FLOAT  test.c  test.sh  value.DOUBLE  value.FLOAT
tests/test_ddebug/: Makefile  ddCmp2  test.sh  unitTest.cxx
tests/test_ddebug_archimedes/: .gitignore  Makefile  archimedes.c  clean.sh  ddCmp  test.sh  vfc_dderrors.py
tests/test_ddebug_canc/: .gitignore  Makefile  archimedes  ddRun  test.sh
tests/test_ddebug_exclude/: .gitignore  clean.sh  test.sh
tests/test_ddebug_gen_include/: .gitignore  clean.sh  test.c  test.sh
tests/test_ddebug_integration/: .gitignore  Makefile  clean.sh  cvPlot  cvPlot.gp  ddCmp  ddRun  ddRun2  integrate.hxx  test.sh
tests/test_distribution/: check.R  check.py  test.c  test.sh
tests/test_ffastmath/: .gitignore  Makefile  clean.sh  test.c  test.sh
tests/test_fix_seed/: .gitignore  clean.sh  test.c  test.sh
tests/test_fma_inst/: .gitignore  clean.sh  test.c  test.sh
tests/test_fortran/: .gitignore  clean.sh  newton.f90  test.sh  test.sh.in
tests/test_fortran_NAS/: .gitignore  clean.sh  test.sh  test.sh.in
tests/test_fortran_vfc_probes/: .gitignore  clean.sh  test.sh  test.sh.in  vfc_probes_test.f90
tests/test_fp80/: .gitignore  clean.sh  rotg.c  test.sh
tests/test_ieee_backend/: .gitignore  Makefile  clean.sh  test.c  test.sh  test_options.c  test_options.sh  test_options_vector.c
tests/test_ieee_backend_debug_binary/: .gitignore  Makefile  clean.sh  generate.py  test.c  test.sh  value.double  value.float
tests/test_include_exclude/: b.c  clean.sh  test.sh
tests/test_instrument_tchebychev/: plot.R  test.sh
tests/test_kahan/: .gitignore  clean.sh  kahan.c  plot.R  test.sh
tests/test_linear_system_kahan/: .gitignore  clean.sh  linear.c  plot.R  test.sh  test_plot.sh
tests/test_logger/: .gitignore  clean.sh  test.c  test.sh
tests/test_mca_backends/: check.py  clean.sh  compute_error.sh  test.c  test.sh
tests/test_mca_rng/: .gitignore  build.sh  clean.sh  sum_kahan.cpp  sum_kahan_openmp.cpp  sum_kahan_openmp_clean.cpp  sum_simple.cpp  sum_simple_openmp.cpp  test.c  (+5 more)
(+586 files in other folders)
