SUBDIRS=common libvfcfuncinstrument libvfcinstrument backends vfcwrapper
include_HEADERS=common/interflop.h
dist_bin_SCRIPTS=vfc_ddebug vfc_precexp vfc_report
pkgpython_PYTHON=ddebug/__init__.py \
								 ddebug/DD.py \
								 ddebug/DD_exec_stat.py \
								 ddebug/DD_stoch.py \
								 ddebug/dd_config.py
