SUBDIRS=common libvfcfuncinstrument libvfcinstrument backends vfcwrapper ci
include_HEADERS=common/interflop.h common/vfc_hashmap.h common/vfc_probes.h
dist_bin_SCRIPTS=vfc_ddebug vfc_precexp vfc_report vfc_ci
pkgpython_PYTHON=ddebug/__init__.py \
								 ddebug/DD.py \
								 ddebug/DD_exec_stat.py \
								 ddebug/DD_stoch.py \
								 ddebug/dd_config.py \
								 sigdigits/sigdigits.py
